fixed focus jump issue.

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,7 +3,18 @@
     font-size: 20px;
     font-weight: 500;
     color: #3B5957 !important;
-    text-shadow: 0px 1px 0px rgba(255,255,255,.6), 0px -1px 0px rgba(0,0,0,.1);
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, .6), 0px -1px 0px rgba(0, 0, 0, .1);
+}
+
+.messenger {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: monospace;
+    font-size: 20px;
+    white-space: nowrap;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, .6), 0px -1px 0px rgba(0, 0, 0, .1);
 }
 
 /* Column Priorities */
@@ -77,5 +88,5 @@
     font-size: 14px;
     font-weight: 500;
     color: #3B5957 !important;
-    text-shadow: 0px 1px 0px rgba(255,255,255,.6), 0px -1px 0px rgba(0,0,0,.1);
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, .6), 0px -1px 0px rgba(0, 0, 0, .1);
 }
